# another-nfl

./: .gitignore  README.md  pyproject.toml
src/: db.py  main.py  nfl_mapping.py  utility.py
