[tool.poetry]
name = "another-nfl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <3.10.0"
pandas = ">=1.0, <2.0"
numpy = ">=1.0, <2.0"
appdirs = ">1"
fastparquet = ">0.5"
nfl_data_py = ">0.3"

[tool.pylint."FORMAT"]
max-line-length= 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
