[project]
authors = [
    {name = "anotherjson", email = "jason.bellegarde@gmail.com"},
]
requires-python = "<3.10.0,>=3.9"
dependencies = [
    "pandas<2.0,>=1.0",
    "numpy<2.0,>=1.0",
    "appdirs>1",
    "fastparquet>0.5",
    "nfl-data-py>0.3",
    "sqlalchemy<3.0.0,>=2.0.40",
    "psycopg2<3.0.0,>=2.9.10",
]
name = "another-nfl"
version = "0.1.0"
description = ""
readme = "README.md"

